# hearth-desktop

./: .editorconfig  .gitignore  .gitleaks.toml  AGENTS.md  FEATURE_GAP_REPORT.md  README.md  TASK_QUEUE.md  eslint.config.js  lefthook.yml  opencode-task.md  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.ts
.github/workflows/: branch-autocleanup.yml  ci.yml  devsecops.yml
PRDs/: 001-rich-text-chat-system.md  002-screen-sharing-video-calling.md  003-global-shortcuts-os-integration.md  01_global_shortcuts_system.md  01_rich_notification_system.md  01_text_messaging_system.md  02_keyboard_shortcuts_accessibility.md  02_server_management_system.md  02_system_tray_depth.md  02_voice_video_calling.md  03_advanced_audio_processing.md  03_advanced_notifications.md  03_advanced_window_management.md  03_screen_share_system.md  03_screen_sharing_and_media.md  04_file_management_media_system.md  04_rich_presence_join_flow.md  04_video_calls_system.md  05_file_upload_media_system.md  05_message_threads_system.md  05_window_management_overlay_system.md  06_global_hotkeys_system.md  06_go_live_streaming_system.md  06_screen_sharing_collaboration.md  06_system_tray_and_background_operation.md  07_advanced_audio_engine.md  07_auto_start_and_window_state.md  07_enhanced_notification_system_integration.md  07_game_detection_activity_system.md  07_system_integration_notifications.md  08_advanced_file_media_system.md  08_app_settings_and_preferences_ui.md  08_multi_window_workspace_management.md  08_security_authentication_system.md  09_accessibility_inclusive_design.md  09_forum_channels_system.md  09_social_presence_activity_system.md  10_soundboard_system.md  11_advanced_voice_controls_system.md  12_global_hotkeys_game_overlay_system.md  (+60 more)
docs/research/: 01-tauri-2x-best-practices.md  02-desktop-notification-patterns.md  02-desktop-notifications-enhanced.md  03-system-tray-ux.md  04-auto-update-strategies.md  05-keyboard-shortcuts.md
src/: app.css  app.d.ts  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: accentcolor.rs  accessibility.rs  activity.rs  activityheatmap.rs  alarmclock.rs  ambientsounds.rs  analytics.rs  applauncher.rs  applog.rs  audio.rs  audio_commands.rs  autoaway.rs  backup.rs  badge.rs  bandwidth.rs  base64tool.rs  batterymon.rs  bluetooth.rs  bookmarks.rs  bootmanager.rs  brightness.rs  calendar.rs  charmap.rs  chatexport.rs  clipboard.rs  clipboardpreview.rs  clipboardsync.rs  clipmanager.rs  clipring.rs  coinflip.rs  colorpalette.rs  colorpicker.rs  commands.rs  connection_status.rs  contentfilter.rs  contrastchecker.rs  cputemp.rs  cronparser.rs  cryptohash.rs  database.rs  (+163 more)
src-tauri/src/commands/: hotkeys.rs  mod.rs
src-tauri/src/notifications/: commands.rs  db.rs  mod.rs
src-tauri/tests/: presence_test.rs
src/lib/: A11Y-AUDIT.md  A11Y.md  VoiceManager.ts  api.ts  gateway.ts  hotkey.ts  idle.test.ts  idle.ts  index.ts  shortcuts.ts  tauri.ts  test-setup.ts  transcription.ts  types.ts  window.ts
src/lib/__tests__/: PinButton.test.ts  ResizablePane.test.ts  VoiceManager.test.ts  api.test.ts  auth.test.ts  channels.test.ts  crypto.test.ts  encryption.test.ts  (+14 more)
src/routes/: +layout.svelte  +page.svelte
static/worklets/: transcription-processor.js
(+1002 files in other folders)
