[package]
name = "hearth-desktop"
version = "0.1.0"
description = "Native desktop client for Hearth chat platform"
authors = ["Greg Hendrickson"]
license = "MIT"
repository = "https://github.com/greghendrickson/hearth-desktop"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
# nokhwa crate for cross-platform screen capture - dependency added as requested
# Currently experiencing edition2024 compatibility with cargo 1.75.0
# Placeholder implementation ready for when toolchain is updated
# nokhwa = { version = "0.10", features = ["input-native"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
